workloads/infrastructure/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-api
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: public
spec:
  rules:
  - host: "prometheus.test"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-server
            port:
              number: 80
